--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-lazyload": "^1.3.1",
     "vue-router": "^3.0.7"
   },
